# WerWolvAPI

./: .gitignore  README.md  config_template.py  database.py  pyproject.toml  requirements.txt  server.py  telemetry.py  werwolv_api.ini
api/: imhex.py  me.py  misc.py
api/impl/imhex/: database.py  store.py  telemetry.py
