[tool.poetry]
name = "werwolvapi"
version = "0.1.0"
description = ""
authors = ["WerWolv", "Nowilltolife", "iTrooz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "3.10.1"
flask = "2.3.2"
flask-caching = "2.0.2"
python-dateutil = "2.8.2"
requests = "2.31.0"
setuptools = "66.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
